--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,22 @@ jobs:
       - name: Checking if diff is empty
         run: if [ -s clang-format-diff.diff ]; then cat clang-format-diff.diff; exit 1; fi
 
+codespell:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install prerequisites
+        run: |
+          sudo apt update && sudo apt install -y codespell
+      - name: Run scan
+        run: |
+          ${GITHUB_WORKSPACE}/.github/scripts/codespell.sh $(pwd)
+
   documentation:
     runs-on: ubuntu-latest
+    needs:
+      - codespell
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -45,3 +59,4 @@ jobs:
         with:
             name: onedpl-html-docs-${{ env.GITHUB_SHA_SHORT }}
             path: html
+
