--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,6 @@ env:
   BUILD_CONCURRENCY: 2
   TEST_TIMEOUT_RELEASE: 360
   TEST_TIMEOUT_DEBUG: 1200
-  ONETBB_LINUX_LINK: https://github.com/oneapi-src/oneTBB/releases/download/v2021.2.0/oneapi-tbb-2021.2.0-lin.tgz
 
 jobs:
   clang-format:
@@ -77,17 +76,29 @@ jobs:
             cxx_compiler: g++
             std: 17
             build_type: release
+          - os: ubuntu-20.04
+            cxx_compiler: icpx
+            std: 17
+            build_type: release
     steps:
       - uses: actions/checkout@v2
-      - name: Get oneTBB
+      - name: Configure apt repositories
         run: |
-          wget ${ONETBB_LINUX_LINK}
-          tar xf oneapi*
+          wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
+          sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
+          rm GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
+          echo "deb https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
+          sudo add-apt-repository "deb https://apt.repos.intel.com/oneapi all main"
+      - name: Install oneTBB
+        run: apt install -y intel-oneapi-tbb-devel
+      - name: Install oneAPI Compiler
+        if: matrix.cxx_compiler == "dpcpp" || matrix.cxx_compiler == "icpx"
+        run: apt install -y intel-oneapi-compiler-dpcpp-cpp
       - name: Run testing
         shell: bash
         run: |
           set -x
-          source oneapi*/env/vars.sh intel64
+          source /opt/intel/oneapi/setvars.sh intel64
           if [[ "${{ matrix.build_type }}" == "debug" ]]; then
             TEST_TIMEOUT=${TEST_TIMEOUT_DEBUG}
           else
