[skip ci] Add sudo
Signed-off-by: Zheltov, Sergey1 <sergey1.zheltov@intel.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,7 +94,7 @@ jobs:
         shell: bash
         run: |
           set -x
-          rm -rf /opt/intel/oneapi/dpl || true
+          sudo rm -rf /opt/intel/oneapi/dpl || true
           source /opt/intel/oneapi/setvars.sh intel64
           if [[ "${{ matrix.build_type }}" == "debug" ]]; then
             TEST_TIMEOUT=${TEST_TIMEOUT_DEBUG}
