--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,7 @@ jobs:
 
   documentation:
     runs-on: ubuntu-latest
-    needs:
-      - codespell
+    needs: [codespell]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
