--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,16 @@ env:
   TEST_TIMEOUT: 360
 
 jobs:
+  set_env:
+    runs-on: [ubuntu-20.04]
+    timeout-minutes: 10
+    outputs:
+      github_sha_short: ${{ steps.set_env.outputs.GITHUB_SHA_SHORT }}
+    steps:
+      - name: Set env
+        id: set_env
+        run: | 
+          echo "::set-output name=GITHUB_SHA_SHORT::${GITHUB_SHA::8}"
   clang-format:
     runs-on: ubuntu-latest
     steps:
@@ -45,23 +55,23 @@ jobs:
 
   documentation:
     runs-on: ubuntu-latest
-    needs: [codespell]
+    needs: [set_env, codespell]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - name: Install prerequisites
         run: |
-          echo GITHUB_SHA_SHORT=${GITHUB_SHA::8} >> $GITHUB_ENV
           python -m pip install -r documentation/library_guide/requirements.txt
       - name: Build documentation
         run: |
           mkdir html
           sphinx-build -b html documentation/library_guide/ html/
+          tar -czvf html.tar.gz html/
       - name: Archive build directory
         uses: actions/upload-artifact@v1
         with:
-            name: onedpl-html-docs-${{ env.GITHUB_SHA_SHORT }}
-            path: html
+            name: onedpl-html-docs-${{needs.set_env.outputs.github_sha_short}}
+            path: html.tar.gz
 
   linux-testing:
     name: ${{ matrix.os }}_${{ matrix.cxx_compiler }}_cxx${{ matrix.std }}_${{ matrix.build_type }}
@@ -102,3 +112,16 @@ jobs:
             -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }} -DONEDPL_BACKEND=${{ matrix.backend }} -DONEDPL_DEVICE_TYPE=${{ matrix.device_type }} ..
           make VERBOSE=1 -j${BUILD_CONCURRENCY}
           ctest --timeout ${TEST_TIMEOUT} --output-on-failure
+  pages:
+    runs-on: ubuntu-latest
+    needs: [set_env, documentation]
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Download documetation
+        uses: actions/download-artifact@v2
+        with:
+          name: onedpl-html-docs-${{needs.set_env.outputs.github_sha_short}}
+      - name: Deploy
+        run: ./scripts/deploy_pages.sh
