--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,12 +116,24 @@ jobs:
     runs-on: ubuntu-latest
     needs: [set_env, documentation]
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout gh-pages
+        uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          ref: gh-pages
+          path: gh-pages
       - name: Download documetation
         uses: actions/download-artifact@v2
         with:
           name: onedpl-html-docs-${{needs.set_env.outputs.github_sha_short}}
-      - name: Deploy
-        run: ./scripts/deploy_pages.sh
+      - name: Publish to github pages
+        run: |
+          tar -xvf html.tar.gz
+          cd gh-pages
+          rm -rf *
+          touch .nojekyll
+          cp -r ../html/* .
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit --reset-author --amend -m "Update from github actions"
+          git push --force origin gh-pages
