--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,16 +14,6 @@ env:
   TEST_TIMEOUT: 360
 
 jobs:
-  set_env:
-    runs-on: [ubuntu-20.04]
-    timeout-minutes: 10
-    outputs:
-      github_sha_short: ${{ steps.set_env.outputs.GITHUB_SHA_SHORT }}
-    steps:
-      - name: Set env
-        id: set_env
-        run: | 
-          echo "::set-output name=GITHUB_SHA_SHORT::${GITHUB_SHA::8}"
   clang-format:
     runs-on: ubuntu-latest
     steps:
@@ -55,12 +45,13 @@ jobs:
 
   documentation:
     runs-on: ubuntu-latest
-    needs: [set_env, codespell]
+    needs: [codespell]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - name: Install prerequisites
         run: |
+          echo GITHUB_SHA_SHORT=${GITHUB_SHA::8} >> $GITHUB_ENV
           python -m pip install -r documentation/library_guide/requirements.txt
       - name: Build documentation
         run: |
@@ -70,9 +61,35 @@ jobs:
       - name: Archive build directory
         uses: actions/upload-artifact@v1
         with:
-            name: onedpl-html-docs-${{needs.set_env.outputs.github_sha_short}}
+            name: onedpl-html-docs-${{ env.GITHUB_SHA_SHORT }}
             path: html.tar.gz
-
+  pages:
+    runs-on: ubuntu-latest
+    needs: [set_env, documentation]
+    steps:
+      - name: Checkout gh-pages
+        uses: actions/checkout@v2
+        with:
+          ref: gh-pages
+          path: gh-pages
+      - name: Set env
+        run: echo GITHUB_SHA_SHORT=${GITHUB_SHA::8} >> $GITHUB_ENV
+      - name: Download documetation
+        uses: actions/download-artifact@v2
+        with:
+          name: onedpl-html-docs-${{ env.GITHUB_SHA_SHORT }}
+      - name: Publish to github pages
+        run: |
+          tar -xvf html.tar.gz
+          cd gh-pages
+          rm -rf *
+          touch .nojekyll # https://github.blog/2009-12-29-bypassing-jekyll-on-github-pages/
+          cp -r ../html/* .
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit --reset-author --amend -m "Update from GitHub Actions"
+          git push --force origin gh-pages
   linux-testing:
     name: ${{ matrix.os }}_${{ matrix.cxx_compiler }}_cxx${{ matrix.std }}_${{ matrix.build_type }}
     runs-on: ['${{ matrix.os }}']
@@ -112,28 +129,4 @@ jobs:
             -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }} -DONEDPL_BACKEND=${{ matrix.backend }} -DONEDPL_DEVICE_TYPE=${{ matrix.device_type }} ..
           make VERBOSE=1 -j${BUILD_CONCURRENCY}
           ctest --timeout ${TEST_TIMEOUT} --output-on-failure
-  pages:
-    runs-on: ubuntu-latest
-    needs: [set_env, documentation]
-    steps:
-      - name: Checkout gh-pages
-        uses: actions/checkout@v2
-        with:
-          ref: gh-pages
-          path: gh-pages
-      - name: Download documetation
-        uses: actions/download-artifact@v2
-        with:
-          name: onedpl-html-docs-${{needs.set_env.outputs.github_sha_short}}
-      - name: Publish to github pages
-        run: |
-          tar -xvf html.tar.gz
-          cd gh-pages
-          rm -rf *
-          touch .nojekyll
-          cp -r ../html/* .
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add .
-          git commit --reset-author --amend -m "Update from github actions"
-          git push --force origin gh-pages
+
