--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
             path: html.tar.gz
   pages:
     runs-on: ubuntu-latest
-    needs: [set_env, documentation]
+    needs: [documentation]
     steps:
       - name: Checkout gh-pages
         uses: actions/checkout@v2
