--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,12 +107,6 @@ jobs:
             build_type: release
             backend: tbb
             device_type: HOST
-          - os: ubuntu-18.04
-            cxx_compiler: icpc
-            std: 17
-            build_type: release
-            backend: tbb
-            device_type: HOST
           - os: ubuntu-20.04
             cxx_compiler: icpx
             std: 17
@@ -137,8 +131,11 @@ jobs:
       - name: Install oneTBB
         run: sudo apt install -y intel-oneapi-tbb-devel
       - name: Install oneAPI Compiler
-        if: matrix.cxx_compiler == 'dpcpp' || matrix.cxx_compiler == 'icpx' || matrix.cxx_compiler == 'icpc'
-        run: sudo apt install -y intel-oneapi-compiler-dpcpp-cpp intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic
+        if: matrix.cxx_compiler == 'dpcpp' || matrix.cxx_compiler == 'icpx'
+        run: sudo apt install -y intel-oneapi-compiler-dpcpp-cpp
+      - name: Install oneAPI Compiler (classic)
+        if: matrix.cxx_compiler == 'icpc'
+        run: sudo apt install -y intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic
       - name: Run testing
         shell: bash
         run: |
