--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,7 @@ jobs:
           sudo rm -rf /opt/intel/oneapi/dpl || true
           source /opt/intel/oneapi/setvars.sh intel64 || true
           if [[ "${{ matrix.cxx_compiler }}" == "dpcpp" ]]; then
-            echo "::debug::$(dpcpp --version)"
+            echo "::warning::$(dpcpp --version)"
           fi
           if [[ "${{ matrix.backend }}" == "dpcpp" ]]; then
             make_targets="sycl_iterator.pass"
@@ -205,7 +205,7 @@ jobs:
           )
           call %CONDA%/condabin/conda.bat activate base
           IF "${{ matrix.cxx_compiler }}" == "dpcpp" (
-            powershell $output = dpcpp --version; echo "::debug::$output"
+            powershell $output = dpcpp --version; echo ::warning::$output
             set toolchain_option=-DCMAKE_TOOLCHAIN_FILE=../cmake/windows-dpcpp-toolchain.cmake
           )
           mkdir build && cd build
