--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -210,12 +210,16 @@ jobs:
         run: |
           call %CONDA%/condabin/conda.bat activate base
           conda install -c intel tbb-devel
+          cd tbb-devel
+          dir
       - name: Install Intel® oneAPI DPC++/C++ Compiler
         if: matrix.cxx_compiler == 'dpcpp' || matrix.cxx_compiler == 'icx'
         shell: cmd
         run: |
           call %CONDA%/condabin/conda.bat activate base
           conda install -c intel dpcpp_win-64
+          cd dpcpp_win-64
+          dir
       - name: Run testing
         shell: cmd
         run: |
