--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -210,19 +210,14 @@ jobs:
         run: |
           call %CONDA%/condabin/conda.bat activate base
           conda install -c intel tbb-devel
-          cd tbb-devel
-          dir
+          dir tbb-devel
       - name: Install Intel® oneAPI DPC++/C++ Compiler
         if: matrix.cxx_compiler == 'dpcpp' || matrix.cxx_compiler == 'icx'
         shell: cmd
         run: |
           call %CONDA%/condabin/conda.bat activate base
           conda install -c intel dpcpp_win-64
-      - name: check the files
-        shell: cmd
-        run: |
-          cd dpcpp_win-64
-          dir
+          dir dpcpp_win-64
       - name: Run testing
         shell: cmd
         run: |
