--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -185,19 +185,19 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: windows-2022
+          - os: windows-2019
             cxx_compiler: dpcpp
             std: 17
             build_type: release
             backend: tbb
             device_type: HOST
-          - os: windows-2022
+          - os: windows-2019
             cxx_compiler: cl
             std: 17
             build_type: release
             backend: tbb
             device_type: HOST
-          - os: windows-2022
+          - os: windows-2019
             cxx_compiler: dpcpp
             std: 17
             build_type: release
@@ -239,6 +239,7 @@ jobs:
           set CPATH=%CONDA_PREFIX%\include
           set TBB_DLL_PATH=%CONDA_PREFIX%\Library\bin
           set CL_CONFIG_TBB_DLL_PATH=%CONDA_PREFIX%\Library\bin
+          powershell -command "(Get-Content %CONDA_PREFIX%\Library\lib\cl.cfg) -replace 'CL_CONFIG_TBB_DLL_PATH =', 'CL_CONFIG_TBB_DLL_PATH = %CONDA_PREFIX%\Library\bin' | Out-File -encoding ASCII %CONDA_PREFIX%\Library\lib\cl.cfg"
           reg add HKLM\SOFTWARE\khronos\OpenCL\Vendors /v intelocl64.dll /t REG_DWORD /d 00000000
           cmake -G "Ninja" %toolchain_option% -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_CXX_STANDARD=${{ matrix.std }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }} -DONEDPL_BACKEND=${{ matrix.backend }} -DONEDPL_DEVICE_TYPE=${{ matrix.device_type }} ..
           ninja -j 2 -v %ninja_targets%
